<resources>
    <string name="app_name">Logica</string>
    <string name="tvConjunction">Conjunction (AND)</string>
    <string name="tvA">A</string>
    <string name="tvB">B</string>
    <string name="tvAB">A ^ B</string>
    <string name="tvT">T</string>
    <string name="tvF">F</string>
    <string name="btnSubmit">Submit</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
</resources>
