<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvConjunction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tvConjunction"
        android:textSize="28sp"
        android:textColor="#FFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- First row (A, B and A^B) -->
    <TextView
        android:id="@+id/tvA"
        style="@style/TFTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConjunction" />

    <TextView
        android:id="@+id/tvB"
        style="@style/TFTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvB"
        app:layout_constraintStart_toEndOf="@+id/tvA"
        app:layout_constraintTop_toBottomOf="@+id/tvConjunction" />

    <TextView
        android:id="@+id/tvAB"
        style="@style/TFTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvB"
        app:layout_constraintTop_toBottomOf="@+id/tvConjunction" />

    <!-- Text views for T and F. L1 = Left column, 1. row etc. -->
    <TextView
        android:id="@+id/tvL1"
        style="@style/TFTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvA" />

    <TextView
        android:id="@+id/tvR1"
        style="@style/TFTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvT"
        app:layout_constraintStart_toEndOf="@+id/tvL1"
        app:layout_constraintTop_toBottomOf="@+id/tvB" />

    <TextView
        android:id="@+id/tvL2"
        style="@style/TFTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvL1" />

    <TextView
        android:id="@+id/tvR2"
        style="@style/TFTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvF"
        app:layout_constraintStart_toEndOf="@+id/tvL2"
        app:layout_constraintTop_toBottomOf="@+id/tvR1" />

    <TextView
        android:id="@+id/tvL3"
        style="@style/TFTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvL2" />

    <TextView
        android:id="@+id/tvR3"
        style="@style/TFTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvT"
        app:layout_constraintStart_toEndOf="@+id/tvL3"
        app:layout_constraintTop_toBottomOf="@+id/tvR2" />

    <TextView
        android:id="@+id/tvL4"
        style="@style/TFTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvL3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvR4"
        style="@style/TFTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvL4"
        app:layout_constraintTop_toBottomOf="@+id/tvR3"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Third column, fields for adding the answers -->

    <EditText
        android:id="@+id/et1"
        style="@style/ETTheme"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvR1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvR1"
        app:layout_constraintTop_toBottomOf="@+id/tvAB"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et2"
        style="@style/ETTheme"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvR2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/tvR2"
        app:layout_constraintTop_toBottomOf="@+id/et1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et3"
        style="@style/ETTheme"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvR3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toEndOf="@+id/tvR3"
        app:layout_constraintTop_toBottomOf="@+id/et2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et4"
        style="@style/ETTheme"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="@+id/tvR4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toEndOf="@+id/tvR4"
        app:layout_constraintTop_toBottomOf="@+id/et3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/btnSubmit"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvR4"
        app:layout_constraintVertical_bias="0.031" />

</androidx.constraintlayout.widget.ConstraintLayout>